--- a/RakeFile
+++ b/RakeFile
@@ -1,4 +1,5 @@
 # Change your GitHub reponame
+require 'jekyll'
 GITHUB_REPONAME = "sriv/sriv.github.io"
 
 
@@ -13,14 +14,15 @@ end
 
 desc "Generate and publish blog to gh-pages"
 task :publish => [:generate] do
-  Dir.mktmpdir do |tmp|
-    cp_r "_site/.", tmp
-    Dir.chdir tmp
-    system "git init"
-    system "git add ."
-    message = "Site updated at #{Time.now.utc}"
-    system "git commit -m #{message.shellescape}"
-    system "git remote add origin git@github.com:#{GITHUB_REPONAME}.git"
-    system "git push origin master --force"
-  end
+  tmp = File.expand_path "#./tmp/#{Time.now.to_i}#{rand(1000)}/"
+  FileUtils.mkdir_p tmp
+  cp_r "_site/.", tmp
+  Dir.chdir tmp
+  system "git init"
+  system "git add ."
+  message = "Site-updated"
+  system "git commit -m #{message.shellescape}"
+  system "git remote add origin https://github.com/#{GITHUB_REPONAME}.git"
+  system "git push origin master --force"
+  FileUtils.rm_rf( tmp ) if File.exists?( tmp )
 end
